kubeflow-components/crud-web-apps/jupyter/manifests/overlays/openshift/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: jupyter
  annotations:
    haproxy.router.openshift.io/rewrite-target: /
spec:
  to:
    kind: Service
    name: jupyter-web-app-service
    weight: 100
  port:
    targetPort: "5000"
  tls:
    termination: Reencrypt
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
